# feather-plugins

./: CMakeLists.txt  README.md
animation/: CMakeLists.txt
animation/images/icons/: CMakeLists.txt
animation/src/: CMakeLists.txt  main.cpp
base/src/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/src/: CMakeLists.txt  main.cpp
deformer/: CMakeLists.txt
deformer/images/icons/: CMakeLists.txt
deformer/src/: CMakeLists.txt  main.cpp
io/src/: CMakeLists.txt  feather.cpp  feather.hpp  io.cpp  io.hpp  main.cpp
io/tests/: CMakeLists.txt
lux/: CMakeLists.txt
lux/images/icons/: CMakeLists.txt
lux/src/: CMakeLists.txt  main.cpp
lux/ui/: CMakeLists.txt  LuxRenderGlobals.qml
ply/: CMakeLists.txt
ply/src/: CMakeLists.txt  main.cpp
polygon/src/: CMakeLists.txt  main.cpp  subdiv.cpp  subdiv.hpp
